# verba_ferri

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build-site.sh  build.rs  game.html  index.html
docs/: game.html  manifest.json  verba_ferri.js  verba_ferri_bg.wasm  word-list.html
pkg/: package.json  verba_ferri.d.ts  verba_ferri.js  verba_ferri_bg.wasm  verba_ferri_bg.wasm.d.ts
site_data/: badges.json  features.json  testimonials.json
src/: lib.rs
src/dictionary/: mod.rs  words.txt
src/game/: mod.rs  scoring.rs  vector.rs
src/ui/: mod.rs
static/: style.css  sw.js
templates/: README.md  game.html  index.html  manifest.json  sw.js
www/: game.html  index.html  sw.js  verba_ferri_bg.wasm.d.ts
www/static/: manifest.json  word-list.html
