[package]
name = "verba_ferri"
version = "0.1.0"
edition = "2021"
description = "A parody of Wordle using vector-space word matching"
repository = "https://github.com/ferrous-lux/verba_ferri"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Url",
    "Window",
    "HtmlInputElement",
    "Node",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
